# uv-project-template

./: .gitignore  AGENT.md  AGENTS.md  README.md  codebook.toml  logging_config.py  main.py  pyproject.toml  run.cmd
