[project]
name = "new-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "imDMG", email = "imdmgg@gmail.com" }]
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "ruff>=0.15.2",
]

# --- Ruff Configuration ---
[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    # "ARG", # flake8-unused-arguments
    "TCH", # flake8-type-checking
]
# ignore = [
#     "E501", # line too long (handled by formatter)
# ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

# --- Pyright Configuration ---
[tool.basedpyright]
# include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "dist"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
